# AI-Surveillance-System

./: .gitignore  README.md  start_system.py
config/: .env  ai-engine.env  ai-engine.env.example  config.yaml  dashboard-api.env  dashboard-api.env.example
deploy/: README.md  pgbouncer.ini.template  users.txt.template
docs/: AI_Surveillance_Architecture_v4.md  PLAN-CONSTRAINED.md  Software_Integration_Document_AI_Surveillance_Engine.docx  implementation_plan.md  integration_plan.md  task.md  (+2 more)
services/ai-engine/: README.md  pyproject.toml  run_all.py
services/ai-engine/.continue/: config.yaml
services/ai-engine/app/api/: main.py
services/ai-engine/app/api/routes/: admin.py  cameras.py  health.py
services/ai-engine/app/core/: circuit_breaker.py  config.py  node_config.py
services/ai-engine/app/database/: connection.py  models.py
services/ai-engine/app/detection/: alignment.py  quality_gate.py  yunet_detector.py
services/ai-engine/app/detection/tracker/: byte_tracker.py  centroid.py
services/ai-engine/app/observability/: logger.py  netdata_stubs.py  prometheus_metrics.py
services/ai-engine/app/recognition/: faiss_index.py  faiss_sync.py  ghostfacenet.py
services/ai-engine/app/services/: nssm_service.py
services/ai-engine/app/storage/: camera_manager.py  evidence_store.py
services/ai-engine/app/workers/: camera_worker.py  recognition_worker.py
services/ai-engine/database/migrations/: env.py
services/ai-engine/database/migrations/versions/: e388a580a2a2_initial.py
services/ai-engine/tests/integration/: test_admin_api.py  test_end_to_end.py
(+116 files in other folders)
